# DynamicAgent

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LEARN.md  README.md  main.py  pyproject.toml
dynamic_agent_service/: __main__.py  pyproject.toml
dynamic_agent_service/agent/: agent_general_interface.py  agent_response_handler.py  agent_structs.py  language_engine.py  operator_handler.py  vision_engine.py
dynamic_agent_service/data/: data_accessor.py
dynamic_agent_service/external_service/: data_accessor.py  knowledge_engine.py  milvus_instance.py  pg_instance.py  qdrant_instance.py  redis_instance.py
dynamic_agent_service/knowledge/: KNOWLEDGE.md  blueprint_accessor.py  blueprint_generation_workflow.py  blueprint_pairing_workflow.py  bp_match_workflow.py  bucket_accessor.py  create_bp_workflow.py  file_textification_workflow.py  knowledge_accessor.py  knowledge_interface.py  knowledge_node_accessor.py  knowledge_structs.py
dynamic_agent_service/operator/: __init__.py  operator_handler.py  service_operator.py
dynamic_agent_service/service/: monitor_events.py  monitor_router.py  service_router.py  service_structs.py  session_accessor.py  session_logger.py  session_management.py  session_router.py  session_service_structs.py  session_struct.py
dynamic_agent_service/util/: SessionLogger.py  auth.py  debug_cache_writer.py  debug_trigger_writer.py  file_process.py  setup_logging.py  vector_math.py
dynamic_agent_service/workflow/: knowledge_extraction_workflow.py
examples/: hello.py  knowledge_inbound.py  knowledge_retrieve.py  message_compact.py  message_list.py  one_operator.py
tests/: bp_attr_pick.py  bp_inbound_test.py  dump_knowledge.py  fake_blueprint_accessor.py  fake_knowledge_accessor.py  inbound_knowledge.py  milvus.py  (+5 more)
(+45 files in other folders)
